# flatview

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/b_scrape/: __init__.py  cli.py  client.py  display.py  export.py  models.py  nehnutelnosti_parser.py  parser.py  urls.py
src/flatview/: __init__.py  analytics.py  cli.py  client.py  config.py  dedup.py  digest.py  display.py  emailer.py  errors.py  export.py  html_report.py  log.py  models.py  nehnutelnosti_parser.py  nehnutelnosti_urls.py  notify.py  parser.py  scrape.py  storage.py  topreality_parser.py  topreality_urls.py  track.py  trends.py  urls.py  watches.py
tests/: conftest.py  test_analytics.py  test_cli.py  test_client.py  test_config.py  test_dedup.py  test_digest.py  test_display.py  test_emailer.py  test_export.py  test_html_report.py  test_log.py  test_models.py  test_nehnutelnosti_parser.py  test_nehnutelnosti_urls.py  test_notify.py  test_parser.py  test_scrape.py  test_storage.py  test_topreality_parser.py  test_topreality_urls.py  test_track.py  test_trends.py  test_urls.py  test_watches.py
