[project]
name = "b-scrape"
version = "0.1.0"
description = "CLI scraper for bazos.sk/bazos.cz classified ads"
readme = "README.md"
authors = [
    { name = "Lasto444", email = "lastovka.vlado@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
]

[project.scripts]
b-scrape = "b_scrape.cli:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
