[project]
name = "flatview"
version = "0.1.0"
description = "CLI scraper for bazos.sk/bazos.cz, nehnutelnosti.sk and topreality.sk classified ads with price insights"
readme = "README.md"
license = "MIT"
authors = [
    { name = "lst-v" }
]
requires-python = ">=3.12"
keywords = ["scraper", "bazos", "nehnutelnosti", "topreality", "real-estate", "cli", "slovakia", "czechia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
    "openpyxl>=3.1.5",
    "fpdf2>=2.8.7",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
flatview = "flatview.cli:main"

[project.urls]
Repository = "https://github.com/lst-v/flatview"
Issues = "https://github.com/lst-v/flatview/issues"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
